hphp/test/slow/parser/hh-reserved-name-parent-1.php.expectf
Fatal error: Cannot use `Parent` as a type name as it is reserved in %s on line 3
